removed outdated tests, corrected timing probvlems, updated JUnit assertions